# print-console-colors

./: .gitignore  .travis.yml  ChangeLog.md  README.md  print-console-colors.cabal  stack.yaml
app/: Main.hs
src/: PrintConsoleColors.hs
