cabal-version: 1.12

name:           print-console-colors
version:        0.1.0.0
description:    Show all console colors.
homepage:       https://github.com/cdepillabout/print-console-colors#readme
bug-reports:    https://github.com/cdepillabout/print-console-colors/issues
author:         Dennis Gosnell
maintainer:     cdep.illabout@gmail.com
copyright:      Copyright (c) 2019 Dennis Gosnell
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md
    img/example.png

source-repository head
  type: git
  location: https://github.com/cdepillabout/print-console-colors

library
  exposed-modules:
      PrintConsoleColors
  other-modules:
      Paths_print_console_colors
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , ansi-terminal
  default-language: Haskell2010
  default-extensions:
      DataKinds
    , GADTs
    , GeneralizedNewtypeDeriving
    , InstanceSigs
    , KindSignatures
    , NamedFieldPuns
    , OverloadedStrings
    , OverloadedLabels
    , PatternSynonyms
    , PolyKinds
    , RankNTypes
    , RecordWildCards
    , ScopedTypeVariables
    , TypeApplications
    , TypeFamilies
    , TypeOperators
  other-extensions:
      TemplateHaskell

executable print-console-colors
  main-is: Main.hs
  other-modules:
      Paths_print_console_colors
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , print-console-colors
  default-language: Haskell2010
